Adapt SCCClientUtilTest to work with commons.httpclient